# GameEngine

./: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: GraphicsSystem.h  SystemManager.h
src/: SystemManager.cpp  SystemManager.h  main.cpp
src/Systems/: GraphicsSystem.cpp  GraphicsSystem.h  TestSystem.cpp  TestSystem.h
